2006-12-26 20:55  jasper

	* plugins/iconbox/iconbox.c:
	  Implement blinking for urgent windows in the iconbox.

2006-12-25 11:14  maximilian

	* libexo/trunk/po/ChangeLog, libexo/trunk/po/LINGUAS,
	  libexo/trunk/po/mk.po, libxfce4util/trunk/po/ChangeLog,
	  libxfce4util/trunk/po/LINGUAS, libxfce4util/trunk/po/mk.po,
	  libxfcegui4/trunk/po/ChangeLog, libxfcegui4/trunk/po/LINGUAS,
	  libxfcegui4/trunk/po/mk.po, mousepad/trunk/po/ChangeLog,
	  mousepad/trunk/po/LINGUAS, mousepad/trunk/po/mk.po,
	  thunar/trunk/po/ChangeLog, thunar/trunk/po/LINGUAS,
	  thunar/trunk/po/mk.po, xfcalendar/trunk/po/ChangeLog,
	  xfcalendar/trunk/po/LINGUAS, xfcalendar/trunk/po/mk.po,
	  xfce-mcs-manager/trunk/po/ChangeLog,
	  xfce-mcs-manager/trunk/po/LINGUAS,
	  xfce-mcs-manager/trunk/po/mk.po,
	  xfce-mcs-plugins/trunk/po/ChangeLog,
	  xfce-mcs-plugins/trunk/po/LINGUAS,
	  xfce-mcs-plugins/trunk/po/mk.po, xfce-utils/trunk/po/ChangeLog,
	  xfce-utils/trunk/po/LINGUAS, xfce-utils/trunk/po/mk.po,
	  xfce4-appfinder/trunk/po/ChangeLog,
	  xfce4-appfinder/trunk/po/LINGUAS,
	  xfce4-appfinder/trunk/po/mk.po,
	  xfce4-icon-theme/trunk/po/ChangeLog,
	  xfce4-icon-theme/trunk/po/LINGUAS,
	  xfce4-icon-theme/trunk/po/mk.po, xfce4-mixer/trunk/po/ChangeLog,
	  xfce4-mixer/trunk/po/LINGUAS, xfce4-mixer/trunk/po/mk.po,
	  po/ChangeLog, po/LINGUAS, po/mk.po,
	  xfce4-session/trunk/po/ChangeLog,
	  xfce4-session/trunk/po/LINGUAS, xfce4-session/trunk/po/mk.po,
	  xfce4-terminal/trunk/po/ChangeLog,
	  xfce4-terminal/trunk/po/mk.po,
	  xfce4-trigger-launcher/trunk/po/ChangeLog,
	  xfce4-trigger-launcher/trunk/po/LINGUAS,
	  xfce4-trigger-launcher/trunk/po/mk.po,
	  xfdesktop/trunk/po/ChangeLog, xfdesktop/trunk/po/LINGUAS,
	  xfdesktop/trunk/po/mk.po, xfmedia/trunk/po/ChangeLog,
	  xfmedia/trunk/po/LINGUAS, xfmedia/trunk/po/mk.po,
	  xfprint/trunk/po/ChangeLog, xfprint/trunk/po/LINGUAS,
	  xfprint/trunk/po/mk.po, xfwm4/trunk/po/ChangeLog,
	  xfwm4/trunk/po/LINGUAS, xfwm4/trunk/po/mk.po: