@@ -1,3 +1,8 @@
+2007-01-19 17:53  nick
+	* plugins/clock/clock.c: Fix crash when moving the plugin.
+	  Bug #2775.
+	* plugins/windowlist/windowlist.c: Fix compiler warning.
+
 2006-12-26 20:55  jasper
 
 	* plugins/iconbox/iconbox.c:
